--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,21 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
     <title>Instagram</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/d449418897.js" crossorigin="anonymous"></script>
+    <script type="text/jsx" src="js/bootstrap.bundle.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
