--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <title>Instagram</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://kit.fontawesome.com/d449418897.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d449418897.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="text/jsx" src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
